Fix for bug 174396. Cannot use m_attachment_count because it's not reliable for determine if the top part is a multipart container. R=cavin, SR=sspitzer